--- a/src/dbus/meson.build
+++ b/src/dbus/meson.build
@@ -13,6 +13,7 @@ dbus_inc_dir = lib_inc_dir / 'dbus'
 dbus_client_protos = [
   # DBus-specific
   ['droidian-flashlightd-dbus', 'org.droidian.Flashlightd.xml', 'org.droidian.Flashlightd'],
+  ['upower-kbdbacklight-dbus', 'org.freedesktop.UPower.KbdBacklight.xml', 'org.freedesktop.UPower'],
   # Sorted by xml filename:
   ['iio-sensor-proxy-dbus', 'net.hadess.SensorProxy.xml', 'net.hadess'],
   ['hostname1-dbus', 'org.freedesktop.hostname1.xml', 'org.freedesktop'],
