DO NOT MERGE: added slider event detection
As it goes for the phoc patch, please do not merge - this is meant
to stay in a feature branch for the time being.

Specifically, mode-manager is not the good place for it, nor is
handling the lights there via upower (that should be handled by
stated instead).

Plus, this commit will also be split in future (to aid upstreaming,
if they're interested).

Signed-off-by: Eugenio Paolantonio (g7) <me@medesimo.eu>

--- a/src/dbus/meson.build
+++ b/src/dbus/meson.build
@@ -12,6 +12,7 @@ dbus_prefix = 'PhoshDBus'
 dbus_client_protos = [
   # DBus-specific
   ['droidian-flashlightd-dbus', 'org.droidian.Flashlightd.xml', 'org.droidian.Flashlightd'],
+  ['upower-kbdbacklight-dbus', 'org.freedesktop.UPower.KbdBacklight.xml', 'org.freedesktop.UPower'],
   # Sorted by xml filename:
   ['iio-sensor-proxy-dbus', 'net.hadess.SensorProxy.xml', 'net.hadess'],
   ['hostname1-dbus', 'org.freedesktop.hostname1.xml', 'org.freedesktop'],
