torch-manager: switch DroidianTorch to the common phosh DBus client namespace
Signed-off-by: Eugenio Paolantonio (g7) <me@medesimo.eu>

--- a/src/dbus/meson.build
+++ b/src/dbus/meson.build
@@ -10,6 +10,8 @@ dbus_prefix = 'PhoshDBus'
 # Protocols where Phosh is the DBus client:
 #
 dbus_client_protos = [
+  # DBus-specific
+  ['droidian-flashlightd-dbus', 'org.droidian.Flashlightd.xml', 'org.droidian.Flashlightd'],
   # Sorted by xml filename:
   ['iio-sensor-proxy-dbus', 'net.hadess.SensorProxy.xml', 'net.hadess'],
   ['hostname1-dbus', 'org.freedesktop.hostname1.xml', 'org.freedesktop'],
