portals: Use phosh specific portals where necessary
The GTK portal doesn't support accent colors yet:

    https://github.com/flatpak/xdg-desktop-portal-gtk/issues/498

and we want to be able to set wallpapers.

Signed-off-by: Guido Günther <agx@sigxcpu.org>

--- a/data/phosh-portals.conf
+++ b/data/phosh-portals.conf
@@ -5,3 +5,5 @@ org.freedesktop.impl.portal.RemoteDesktop=none;
 org.freedesktop.impl.portal.ScreenCast=wlr;
 org.freedesktop.impl.portal.Screenshot=gtk;wlr;
 org.freedesktop.impl.portal.Secret=gnome-keyring;
+org.freedesktop.impl.portal.Settings=pmp;
+org.freedesktop.impl.portal.Wallpaper=pmp;
