--- a/data/phosh-portals.conf
+++ b/data/phosh-portals.conf
@@ -1,5 +1,5 @@
 [preferred]
-default=gtk
+default=gtk;
 org.freedesktop.impl.portal.Access=phosh;
 org.freedesktop.impl.portal.RemoteDesktop=none;
 org.freedesktop.impl.portal.ScreenCast=wlr;
