--- a/data/phosh-portals.conf
+++ b/data/phosh-portals.conf
@@ -1,6 +1,9 @@
 [preferred]
 default=gtk;
 org.freedesktop.impl.portal.Access=phosh;
+org.freedesktop.impl.portal.Background=none;
+org.freedesktop.impl.portal.Clipboard=none;
+org.freedesktop.impl.portal.InputCapture=none;
 org.freedesktop.impl.portal.RemoteDesktop=none;
 org.freedesktop.impl.portal.ScreenCast=wlr;
 org.freedesktop.impl.portal.Screenshot=gtk;wlr;
